Fixed invalid character entities for apostrophes.

--- a/_posts/2014-10-22-remote.html
+++ b/_posts/2014-10-22-remote.html
@@ -86,23 +86,23 @@ color: "#FFFFFF"
         <div class="row">
           <section class="col-md-6 col-md-offset-3">
             <p class="avatar"><img src="/images/avatar-jngo.jpg" alt="John Ngo" width="60" height="60" class="img-circle" data-toggle="tooltip" title="John"></p>
-            <p>Thanks everyone for taking part. It’rsquo;s a great pleasure to read and chat with such a great group.</p>
-            <p>I’rsquo;ve worked remotely in some form or another for the past five years and while doing so, have been fortunate enough to spend time in cities such as Manila, Tokyo, Hong Kong, London, New York, and Berlin. There have been many interesting challenges along the way, but it’rsquo;s definitely been worth it.</p>
-            <p><strong>So let’rsquo;s start by telling everyone a bit about yourself, what you care about, and why the subject of remote working is interesting to you.</strong></p>
+            <p>Thanks everyone for taking part. It&rsquo;s a great pleasure to read and chat with such a great group.</p>
+            <p>I&rsquo;ve worked remotely in some form or another for the past five years and while doing so, have been fortunate enough to spend time in cities such as Manila, Tokyo, Hong Kong, London, New York, and Berlin. There have been many interesting challenges along the way, but it&rsquo;s definitely been worth it.</p>
+            <p><strong>So let&rsquo;s start by telling everyone a bit about yourself, what you care about, and why the subject of remote working is interesting to you.</strong></p>
             <p class="avatar"><img src="https://pbs.twimg.com/profile_images/1187167006/me_square.jpg" alt="Boon Chew" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Boon"></p>
-            <p>My name is Boon, and I’rsquo;m an information architect at a large integrated digital agency in London. I was formerly a software developer but I haven’rsquo;t touched code for a long time. I’rsquo;m also an avid sketchnoter.</p>
+            <p>My name is Boon, and I&rsquo;m an information architect at a large integrated digital agency in London. I was formerly a software developer but I haven&rsquo;t touched code for a long time. I&rsquo;m also an avid sketchnoter.</p>
             <p>I think remote working is interesting because it seems like a more sustainable way of working. A lot of stress is caused by commuting alone. I rarely have time to grab breakfast in the morning.</p>
             <p>Also, I used to rent and live with my parents. Now that I own an apartment, I really want to spend more time in it. I also love the freedom of exploring the city and to travel more. London is a great city to do all that.</p>
             <p class="avatar"><img src="/images/avatar-bengfai.jpg" alt="Beng-Fai Mok" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Beng-Fai"></p>
-            <p>I’rsquo;m Beng-Fai. I consider myself a bit of a jack of all trades, working mainly in the startup world. In a past life, I’rsquo;ve worked as a management consultant. In both professions I’rsquo;ve had to work with remote teams and I’rsquo;m curious to hear about everyone’rsquo;s remote working experiences, challenges, and benefits.</p>
+            <p>I&rsquo;m Beng-Fai. I consider myself a bit of a jack of all trades, working mainly in the startup world. In a past life, I&rsquo;ve worked as a management consultant. In both professions I&rsquo;ve had to work with remote teams and I&rsquo;m curious to hear about everyone&rsquo;s remote working experiences, challenges, and benefits.</p>
             <p>This should be a fun discussion!</p>
             <p class="avatar"><img src="/images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Cat"></p>
             <p>Howdy!</p>
-            <p>My name is Cat and I’rsquo;m currently trying to build a remote workforce. My business partner and I work primarily via Skype, Basecamp, and Dropbox; and we have a part-time art worker who lives on a farm in Portugal.</p>
-            <p>I’rsquo;m looking for ways to improve the way we work, and tips on how to hire for and induct into a remote workforce.</p>
+            <p>My name is Cat and I&rsquo;m currently trying to build a remote workforce. My business partner and I work primarily via Skype, Basecamp, and Dropbox; and we have a part-time art worker who lives on a farm in Portugal.</p>
+            <p>I&rsquo;m looking for ways to improve the way we work, and tips on how to hire for and induct into a remote workforce.</p>
             <p class="avatar"><img src="https://pbs.twimg.com/profile_images/488244574255468545/QM7-Kvg2_400x400.jpeg" alt="Beatrix Coles" width="60" height="60" class="img-circle" data-toggle="tooltip" title="Beatrix"></p>
-            <p>I’rsquo;m Beatrix, I live in Melbourne but am from New Zealand. I have started my own consultancy, ScreenHerd, doing online audience engagement for film projects. I also do social media content and digital copywriting work. I have worked remotely for local and international organisations and currently work on a freelance basis with a number of clients that I only encounter online. I have worked remotely for local and international organisations and currently work on a freelance basis.</p>
-            <p>I’rsquo;m keen to talk about the management of remote work, especially around relationship building and trust. I am very positive about remote work and think it’rsquo;s very exciting and should be more widespread.</p>
+            <p>I&rsquo;m Beatrix, I live in Melbourne but am from New Zealand. I have started my own consultancy, ScreenHerd, doing online audience engagement for film projects. I also do social media content and digital copywriting work. I have worked remotely for local and international organisations and currently work on a freelance basis with a number of clients that I only encounter online. I have worked remotely for local and international organisations and currently work on a freelance basis.</p>
+            <p>I&rsquo;m keen to talk about the management of remote work, especially around relationship building and trust. I am very positive about remote work and think it&rsquo;s very exciting and should be more widespread.</p>
           </section>
         </div>
 
