Fixed typo in post description.

--- a/_posts/2014-10-22-remote.html
+++ b/_posts/2014-10-22-remote.html
@@ -1,7 +1,7 @@
 ---
 title: Remote
 author: Jason Fried &amp; David Heinemeier Hannson
-description: John Ngo hosts a diverse round table made up of Boon Chew, Beng-Fai Mok, Cat Townsend, and Beatrix Coles on Jason Fried&rsquo;s and David Heinemeier Hannson&amp;s latest book about remote working.
+description: John Ngo hosts a diverse round table made up of Boon Chew, Beng-Fai Mok, Cat Townsend, and Beatrix Coles on Jason Fried&rsquo;s and David Heinemeier Hannson&rsquo;s latest book about remote working.
 date: 2014-10-22
 start: 2013-11-20
 end: 2014-07-20
