Updated contact details for Cat Townsend.

--- a/_posts/2014-10-22-remote.html
+++ b/_posts/2014-10-22-remote.html
@@ -56,7 +56,7 @@ color: "#FFFFFF"
           <div class="col-sm-2">
             <img src="/images/avatar-catisnotpretty.jpg" alt="Cat Townsend" width="100" height="100" class="img-circle">
             <h3>Cat Townsend</h3>
-            <p><a href="https://twitter.com/catisnotpretty">@catisnotpretty</a><br><a href="http://www.notpretty.net/">notpretty.net</a><br>Design</p>
+            <p><a href="https://twitter.com/feelgood_cat">@feelgood_cat</a><br><a href="http://www.feelgoodagency.com/">feelgoodagency.com</a><br>Design</p>
           </div>
 
           <div class="col-sm-2">
