Added additional thanks to about page.

--- a/about.html
+++ b/about.html
@@ -48,10 +48,12 @@ title: About
         <p>My sincerest thanks to everyone who has contributed to making <em>Books &amp; Conversations</em> what it is.</p>
 
         <ul class="list-inline-separated text-center">
-          <li><a href="https://twitter.com/catisnotpretty">Cat Townsend</a></li>
+          <li><a href="https://twitter.com/feelgood_cat">Cat Townsend</a></li>
           <li><a href="https://twitter.com/bengfai">Beng-Fai Mok</a></li>
           <li><a href="https://twitter.com/sjors">Sjors Timmer</a></li>
           <li><a href="https://twitter.com/geezemo">Jason Lambert</a></li>
+          <li><a href="https://twitter.com/boonych">Boon Chew</a></li>
+          <li><a href="https://twitter.com/beatrixcoles">Beatrix Coles</a></li>
         </ul>
       </section>
     </div>
